# logia

./: .gitignore  LICENSE  README.md  backend_applesilicon.spec  backend_intel_mac.spec  backend_windows.spec  forge.config.ts  index.html  package.json  py_backend.spec  pyproject.toml  vite.base.config.ts  vite.renderer.config.ts
docs/: Gemfile  _config.yml  index.markdown
images/: icon.icns
py_src/: media.py  py_backend.py
py_src/backends/: apple_silicon.py  general.py
py_src/backends/mlx/: __init__.py  audio.py  transcribe.py
src/: App.css  App.tsx  const.ts  declare.ts  index.css  interface.d.ts  main.ts  preload.ts  renderer.tsx  store.ts  utils.ts
src/components/: mediaInfo.tsx  outputModal.tsx  sequenceTable.tsx  taskQueueTable.tsx  textEditArea.tsx  timeStampInput.tsx  timelineEngine.ts  timelineTable.tsx  transcriptionModal.tsx  welcomePage.tsx
src/components/Timeline/: T.tsx  index.css  index.tsx
src/features/: ffmpeg.ts  file.ts  logging.ts  output.ts  transcript.ts
