[tool.poetry]
name = "logia"
version = "0.1.0"
description = "動画クリエイターのための自動文字起こしソフト"
authors = ["mzsm <mizushimaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.1,<3.13"
faster-whisper = "^1.0.2"
mlx = { version = "^0.15.0", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" }
mlx-whisper = { version = "^0.1.0", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" }
numba = "^0.60.0"
numpy = "^1.26.4"
torch = "^2.3.1"
tqdm = "^4.66.4"
more-itertools = "^10.3.0"
tiktoken = "^0.7.0"
huggingface-hub = "^0.23.4"
scipy = "^1.13.1"
ujson = "^5.10.0"
pyinstaller = "^6.8.0"
ctranslate2 = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
