[tool.poetry]
name = "logia"
version = "0.1.0"
description = "動画クリエイターのための文字起こし・字幕制作支援アプリ"
authors = ["mzsm <mizushimaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.1,<3.13"
faster-whisper = "^1.0.3"
mlx = { version = "^0.15.2", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" }
mlx-whisper = { version = "^0.1.0", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" }
numpy = { version = "1.26.4", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" }
ujson = "^5.10.0"
pyinstaller = "^6.8.0"
ctranslate2 = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
